--- a/src/main/resources/templates/productSelection.html
+++ b/src/main/resources/templates/productSelection.html
@@ -3,6 +3,7 @@
 		<title>Product selection</title>
 	 	<meta charset="utf-8" />
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
+		<link rel="stylesheet" type="text/css" href="/css/productSelection.css" />
 	</head>
 	
 	<body>
@@ -15,14 +16,16 @@
 		</nav>
 		
 		<div id="body">
-			Product Selection: 
-			<p th:text="'Hello, ' + ${message} + '!'" />
-			
-			<th:block th:each="smokeTest : ${availableProducts}">
-			    <tr>
-			        <td th:text="${smokeTest.name}">A Smoke Test'</td>
-			    </tr>
-			</th:block>
+<!-- 			<p th:text="'Hello, ' + ${customerId} + '!'" /> -->
+			<div id="div1"></div>
+		    <div id="div2"></div>
+		    <div id="div3"></div>
+<!-- 			Product Selection:  -->
+<!-- 			<th:block th:each="smokeTest : ${availableProducts}"> -->
+<!-- 			    <tr> -->
+<!-- 			        <td th:text="${smokeTest.name}">A Smoke Test'</td> -->
+<!-- 			    </tr> -->
+<!-- 			</th:block> -->
 		</div>
 	
         <footer>
