--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -9,15 +9,11 @@ body {
    min-height:100%;
    position:relative;
 }
-#header {
-   background:#ff0;
-   padding:25px;
-}
 #body {
-   padding:10px;
    padding-bottom:60px;
    padding-top: 25px;
-   padding-left: 25px;
+   margin-left: 0px;
+   height: 80%;
 }
 footer {
    position:absolute;
@@ -28,9 +24,19 @@ footer {
 }
 #menu ul li a {
 	padding: 2px 10px;
-	display: inline-block;
 	color: #333;
 	text-decoration: none;
 	border-bottom:3px solid #EDEDED;
 	padding-top: 15px;
+	vertical-align: top;
+}
+#menu ul {
+	vertical-align: top;
+	display: inline-flex;
+}
+#menu li {
+	display: inline-block;
+}
+#menu {
+	padding-top: 20px;
 }
