--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,8 +2,8 @@
 	<head>
 		<title>Authentication</title>
 		<meta charset="utf-8" />
-		<script src="/js/cookies.js"></script>
 		<link rel="stylesheet" type="text/css" href="/css/style.css" />
+		<script src="/js/cookies.js"></script>
 	</head>
 	
 	<body>
@@ -24,7 +24,7 @@
         </div>
         
         <footer>
-        	ola footer
+        	© 2017 Private Company
         </footer>
 	</body>
 </html>
