--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
         </div>
         
         <footer>
-        	© 2017 Private Company
+        	<label>© 2017 Private Company</label>
         </footer>
 	</body>
 </html>
