--- a/src/main/resources/templates/productSelection.html
+++ b/src/main/resources/templates/productSelection.html
@@ -54,7 +54,7 @@
 		</div>
 		
         <footer>
-        	© 2017 Private Company
+        	<label>© 2017 Private Company</label>
         </footer>
 	</body>
 </html>
