--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,12 +19,12 @@
 	        <form method="POST" action="/productselection/customerLocation">
 	        	Customer Id:
 	        	<input type="text" id="customerId" name="customerId" required="required" />
-	            <input type="submit" onclick="setCookie();" />
+	            <input type="submit" onclick="setCookie();" value="Submit" />
 	        </form>
         </div>
         
         <footer>
-        	<label>© 2017 Private Company</label>
+        	<label id="labelFooter">© 2017 Private Company</label>
         </footer>
 	</body>
 </html>
