--- a/src/main/resources/templates/productSelection.html
+++ b/src/main/resources/templates/productSelection.html
@@ -54,7 +54,7 @@
 		</div>
 		
         <footer>
-        	<label>© 2017 Private Company</label>
+        	<label id="labelFooter">© 2017 Private Company</label>
         </footer>
 	</body>
 </html>
