--- a/src/main/resources/static/css/productSelection.css
+++ b/src/main/resources/static/css/productSelection.css
@@ -1,13 +1,14 @@
 #div1, #div2, #div3 {
 	float: left;
 	width: 28%;
-	height: 73%;
-	margin-top: 40px;
+	height: 50%;
 	position: relative;
 	padding: 14px;
+	border-radius: 25px;
+	border: 2px solid #73AD21;
 } 
 #div1 {
-	margin-left: 17px;
+	margin-left: 12px;
 }
 #div2 {
 	margin-left: 3%;
@@ -19,10 +20,10 @@ td {
 	padding-bottom: 10px;
 	padding-top: 8px;
 }
-#submit {
+#checkout {
 	width: 100px;
 	height: 50px;
-	float: none;
-	margin-top: 68%;
-	margin-left: 32%;
+	float: right;
+	margin-right: 1%;
+	margin-top: 1%;
 }
