--- a/src/main/resources/templates/productSelection.html
+++ b/src/main/resources/templates/productSelection.html
@@ -44,10 +44,8 @@
 			    <div id="div3">
 			    	Basket
 			    	<div id="basketDiv"></div>
-			    	
-			    	<input type="submit" value="Checkout" id="submit"></input>
-			    	
 			    </div>
+			    <input type="submit" value="Checkout" id="checkout"></input>
 		    </form>
 		    
 		    <label style="color: red;" th:text="${errorMessage}"></label>
@@ -58,3 +56,7 @@
         </footer>
 	</body>
 </html>
+
+<script>
+	updateBasket();
+</script>
