geeting clean code

--- a/src/main/resources/templates/confirmationPage.html
+++ b/src/main/resources/templates/confirmationPage.html
@@ -10,9 +10,9 @@
 	<body>
 		<nav id="menu">
 			<ul>
-				<li><a href="../productselection">Home</a></li>
-				<li><a href="../productselection">Products</a></li>
-				<li><a href="../productselection">Catalogue</a></li>
+				<li><a href="/productselection">Home</a></li>
+				<li><a href="/productselection">Products</a></li>
+				<li><a href="/productselection">Catalogue</a></li>
 			</ul>
 		</nav>
 		
