--- a/src/main/resources/templates/productSelection.html
+++ b/src/main/resources/templates/productSelection.html
@@ -11,14 +11,14 @@
 	<body>
 		<nav id="menu">
 			<ul>
-				<li><a href="../productselection">Home</a></li>
-				<li><a href="../productselection">Products</a></li>
-				<li><a href="../productselection">Catalogue</a></li>
+				<li><a href="/productselection">Home</a></li>
+				<li><a href="/productselection">Products</a></li>
+				<li><a href="/productselection">Catalogue</a></li>
 			</ul>
 		</nav>
 		
 		<div id="body">
-			<form method="POST" action="/productselection/confirmationPage">
+			<form method="GET" action="/productselection/confirmationPage/">
 				<div id="div1">
 					Sports
 			    	<table>
