--- a/src/main/resources/templates/productSelection.html
+++ b/src/main/resources/templates/productSelection.html
@@ -1,6 +1,6 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 	<head>
-		<title>Product selection</title>
+		<title>Product Selection</title>
 	 	<meta charset="utf-8"></meta>
 		<link rel="stylesheet" type="text/css" href="/css/style.css"></link>
 		<link rel="stylesheet" type="text/css" href="/css/productSelection.css"></link>
