--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -15,7 +15,7 @@
 		</nav>
 		
 		<div id="body">
-			<label>Sorry, but wasn't possible to find this page. Please, return to the Home page. </label> <a href="/productselection">Return</a>
+			<label>Sorry, we do not found this page. Please, return to the Home page. </label><a href="/productselection">Return page</a>
         </div>
         
         <footer>
