--- a/src/main/resources/templates/error/general.html
+++ b/src/main/resources/templates/error/general.html
@@ -3,6 +3,7 @@
 		<title>Database Error</title>
 		<meta charset="utf-8"></meta>
 		<link rel="stylesheet" type="text/css" href="/css/style.css"></link>
+		<link rel="stylesheet" type="text/css" href="/css/error.css"></link>
 	</head>
 	
 	<body>
@@ -16,7 +17,7 @@
 		
 		<div id="body">
 			<label style="color: red;" th:text="${message}"></label>
-			<a href="javascript:history.back()">Go Back</a>
+			<a href="javascript:history.back()"> Go Back</a>
         </div>
         
         <footer>
