reviewed some staffs as method name

--- a/src/main/resources/templates/error/general.html
+++ b/src/main/resources/templates/error/general.html
@@ -1,6 +1,6 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 	<head>
-		<title>Database Error</title>
+		<title>Warning</title>
 		<meta charset="utf-8"></meta>
 		<link rel="stylesheet" type="text/css" href="/css/style.css"></link>
 		<link rel="stylesheet" type="text/css" href="/css/error.css"></link>
