Make clean code. Make better the coverage test.

--- a/src/main/resources/templates/productSelection.html
+++ b/src/main/resources/templates/productSelection.html
@@ -45,6 +45,7 @@
 			    	Basket
 			    	<div id="basketDiv"></div>
 			    </div>
+			    <input type="hidden" name="customerId" th:value="${customerId}"></input>
 			    <input type="submit" value="Checkout" id="checkout"></input>
 		    </form>
 		</div>
